--- a/src/css/App.css
+++ b/src/css/App.css
@@ -10,60 +10,50 @@
   --baseFontSize: 10px;
   --baseFont: "Times New Roman", times, serif;
 
-  /* change the font size variable, here base unit is 10px. ex. 28px = 2.8rem */
-  --h2MinFontSize: 24px;
-  --h2FontSize: 7.2rem;
+  /* set min and max for different typography level */
+  /* calculate font size dynamically for medium size screens */
+  /*  minfotsize + (maxfontsize - minfontsize) * (100vw - minscreensize)/maxscreensize - minscreensize      */
+  --h2MinFontSize: 30px;
+  --h2FontSize: calc(var(--h2MinFontSize) + 5.83 * (1vw - 4.8px));
   --h2MaxFontSize: 72px;
 
   --h3MinFontSize: 20px;
-  --h3FontSize: 5.6rem;
   --h3MaxFontSize: 56px;
 
-  --h5MinFontSize: 14px;
-  --h5FontSize: 2.1rem;
+  --h4MinFontSize: 18px;
+  --h4MaxFontSize: 30px;
+
+  --h5MinFontSize: 16px;
   --h5MaxFontSize: 21px;
 
-  --buttonPaddingTop: 1.6rem;
-  --buttonPaddingLeft: 4rem;
-  --buttonFontSize: 1.6rem;
-  --buttonMinFontSize: 12px;
+  --h6MinFontSize: 14px;
+  --h6MaxFontSize: 18px;
 
-  --arrowColor: var(--mainBlack);
-  --arrowWidth: 5.4rem;
-  --arrowMinWidth: 24px;
-  --arrowHoverOpacity: 0.6;
+  --pMinFontSize: 12px;
+  --pFontSize: calc(var(--pMinFontSize) + 0.556 * (1vw - 4.8px));
+  --pMaxFontSize: 16px;
 
   --letterSpacing: -0.02em;
 
   /* page-related universal setting */
   --pageTop: 12rem;
-  --pageSidePadding: 3vw;
-
-  /* carousel universal setting */
-  --quoteSidePaddingRegular: 13.1vw;
-  --quoteSidePaddingBlue: 8vw;
-
-  --dividerLineWidth: var(--h2FontSize);
-  --dividerLineSize: 2px;
-  --dividerLineColor: var(--mainBlack);
-
-  /* message page universal css variable */
-  --messagePageSidePadding: 10%;
 }
 
 html {
-  font-size: 10px !important;
+  font-size: 10px;
   color: var(--mainBlack);
 }
+
 * {
   box-sizing: border-box;
 }
+
 body {
   margin: 0;
   text-align: center;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  display: relative;
+  position: relative;
   height: 100%;
 }
 
@@ -80,42 +70,45 @@ p {
 }
 
 h2 {
-  font-size: 7.2rem !important;
-  line-height: 111% !important;
+  font-size: var(--h2MinFontSize);
+  line-height: 111%;
 }
 
 h3 {
-  font-size: 5.6rem !important;
-  line-height: 114% !important;
+  font-size: var(--h3MinFontSize);
+  line-height: 114%;
 }
 
 h4 {
-  font-size: 3rem !important;
-  line-height: 110% !important;
+  font-size: var(--h4MinFontSize);
+  line-height: 110%;
 }
+
 h5 {
-  font-size: var(--h5FontSize) !important;
-  line-height: 190% !important;
+  font-size: var(--h5MinFontSize);
+  line-height: 190%;
   text-transform: uppercase;
+  font-weight: bold;
 }
 
 h6 {
-  font-size: 1.8rem !important;
-  line-height: 110% !important;
+  font-size: var(--h6MinFontSize);
+  line-height: 110%;
+}
+
+p {
+  font-size: var(--pMinFontSize);
 }
 
 .blue-text {
-  color: var(--mainBlue) !important;
+  color: var(--mainBlue);
 }
 
 .bold-text {
   font-weight: bold;
 }
 
-.page {
-  position: relative;
-}
-
+/* set up background image */
 .backgroundImage {
   position: absolute;
   z-index: -1;
@@ -134,37 +127,59 @@ h6 {
   bottom: 1.69%;
 }
 
-@media (max-width: 500px) {
-  button {
-    height: calc(5rem + 12px) !important;
-  }
-
-  .quote-container h2 {
-    padding: 0.4em 10vw 0.6em 10vw !important;
+@media screen and (max-width: 480px) {
+  /* phone */
+  html {
+    font-size: 4px;
   }
 }
 
-@media (max-width: 1200px) {
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  /* tablet */
   html {
-    font-size: max(2.6px, 0.83vw) !important;
-  }
-  h2 {
-    font-size: max(var(--h2MinFontSize), var(--h2FontSize)) !important;
-  }
-  h3 {
-    font-size: max(var(--h3MinFontSize), var(--h3FontSize)) !important;
-  }
-  p {
-    font-size: max(12px, 1.6rem) !important;
-  }
-  h5 {
-    font-size: max(14px, var(--h5FontSize)) !important;
+    font-size: 0.83vw;
   }
 
-  h4 {
-    font-size: max(20px, 3rem) !important;
+  h2 {
+    font-size: var(--h2FontSize);
   }
+  h3 {
+    font-size: calc(var(--h3MinFontSize) + 5 * (1vw - 4.8px));
+  }
+  h4 {
+    font-size: calc(var(--h4MinFontSize) + 1.666667 * (1vw - 4.8px));
+  }
+  h5 {
+    font-size: calc(var(--h5MinFontSize) + 0.7 * (1vw - 4.8px));
+  }
+
   h6 {
-    font-size: max(14px, 1.8rem) !important;
+    font-size: calc(var(--h6MinFontSize) + 0.556 * (1vw - 4.8px));
+  }
+  p {
+    font-size: var(--pFontSize);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  /* desktop and above */
+  h2 {
+    font-size: var(--h2MaxFontSize);
+  }
+  h3 {
+    font-size: var(--h3MaxFontSize);
+  }
+  h4 {
+    font-size: var(--h4MaxFontSize);
+  }
+  h5 {
+    font-size: var(--h5MaxFontSize);
+  }
+
+  h6 {
+    font-size: var(--h6MaxFontSize);
+  }
+  p {
+    font-size: var(--pMaxFontSize);
   }
 }
